macros were added into makefile, no warning in compilation

--- a/P-2/Project2/Project2/Makefile
+++ b/P-2/Project2/Project2/Makefile
@@ -39,7 +39,7 @@ Vegetable.o:
 	$(CXX) $(CXXFLAGS) -c Vegetable.cpp
 	
 run:
-	./driver.out
+	./driver.out $(STORE) $(ORDERS)
 	
 clean:
 	rm -rf *.o
