--- a/P-3/Project3/Project3.vcxproj
+++ b/P-3/Project3/Project3.vcxproj
@@ -64,6 +64,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AugmentedBinarySearchTree.cpp" />
     <ClCompile Include="BinarySearchTree.cpp" />
     <ClCompile Include="Exceptions.cpp" />
     <ClCompile Include="Proj3.cpp" />
