--- a/P-3/Project3/Project3.vcxproj.filters
+++ b/P-3/Project3/Project3.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Exceptions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AugmentedBinarySearchTree.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BinarySearchTree.h">
